--- a/index.html.html
+++ b/index.html.html
@@ -36,6 +36,42 @@
       padding: 0 16px;
     }
 
+    /* ANNOUNCEMENT BANNER */
+    .announcement-banner {
+      background: linear-gradient(90deg, #ff6b6b, #ff9a57, #ffdd57);
+      padding: 12px 16px;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 101;
+      box-shadow: 0 4px 20px rgba(255, 107, 107, 0.3);
+      animation: pulse-banner 2s ease-in-out infinite;
+    }
+
+    @keyframes pulse-banner {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.85; }
+    }
+
+    .announcement-banner p {
+      margin: 0;
+      font-family: 'Bangers', cursive;
+      font-size: 14px;
+      font-weight: 700;
+      color: #081224;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .announcement-banner span {
+      display: inline-block;
+      margin: 0 8px;
+      padding: 4px 12px;
+      background: rgba(0, 0, 0, 0.2);
+      border-radius: 20px;
+      font-size: 12px;
+    }
+
     /* NAV */
     nav {
       display: flex;
@@ -672,6 +708,10 @@
 </head>
 <body>
 
+  <div class="announcement-banner" style="color: white;">
+    <p>🔥 Coming Soon <span>LIVE IN HOURS</span> </p>
+  </div>
+
   <div class="meme-float mf-bottom-right">
     <img src="freepik_br_66b88a4d-63fe-430d-93ec-c00b89d21494.png" alt="Toilet Dust 2.0 meme">
   </div>
@@ -700,11 +740,8 @@
         </div>
       </div>
       <div class="top-buttons">
-        <a class="btn" href="https://twitter.com/" target="_blank" rel="noopener">🐦 Twitter</a>
-        <a class="btn" href="https://t.me/" target="_blank" rel="noopener">✉️ Telegram</a>
-        <a class="btn" href="https://dexscreener.com/" target="_blank" rel="noopener">🔎 DexScreener</a>
-        <a class="btn" href="https://www.dextools.io/" target="_blank" rel="noopener">🛠️ DexTools</a>
-      </div>
+        <a class="btn" href="https://x.com/i/communities/2019275827469225985" target="_blank" rel="noopener">X Community</a>
+        <a class="btn" href="https://x.com/toiletdustsui2?s=21" target="_blank" rel="noopener">X</a>
     </nav>
 
     <!-- HERO -->
@@ -738,7 +775,7 @@
         </div>
 
         <div class="cta">
-          <button class="btn btn-primary">Join Now</button>
+          <a class="btn btn-primary" href="https://x.com/i/communities/2019275827469225985" target="_blank" rel="noopener">Join Now</a>
           <button class="btn" onclick="document.getElementById('whats-new').scrollIntoView({behavior:'smooth'})">Learn More</button>
         </div>
       </section>
@@ -792,28 +829,7 @@
       </p>
     </section>
 
-    <!-- TOKENOMICS -->
-    <section class="block">
-      <h2>Tokenomics</h2>
-      <div class="grid-2">
-        <div class="card">
-          <h3>Total Supply</h3>
-          <p>1,000,000,000,000 TD</p>
-        </div>
-        <div class="card">
-          <h3>Redistribution</h3>
-          <p>3% to holders — keep the groove</p>
-        </div>
-        <div class="card">
-          <h3>Liquidity</h3>
-          <p>4% locked — steady rock</p>
-        </div>
-        <div class="card">
-          <h3>Team Vesting</h3>
-          <p>2% vested — long-term chest</p>
-        </div>
-      </div>
-    </section>
+    
 
     <!-- ROADMAP -->
     <section class="block">
