Update print statement from 'Hello' to 'Goodbye'

--- a/index.html.html
+++ b/index.html.html
@@ -709,7 +709,7 @@
 <body>
 
   <div class="announcement-banner" style="color: white;">
-    <p>🔥 Coming Soon <span>LIVE IN HOURS</span> </p>
+    <p>🔥 COMING SOON </p>
   </div>
 
   <div class="meme-float mf-bottom-right">
@@ -1002,3 +1002,4 @@
 
 </body>
 </html>
+
